force-app/main/default/objects/Integration_Attempt__c/Integration_Attempt__c.object-meta.xml
<CustomObject>
    <label>Integration Attempt</label>
    <nameField>
        <displayFormat>IA-{000000}</displayFormat>
        <label>IntegrationAttempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>