force-app/main/default/objects/Integration_Attempt__c/fields/Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Number__c</fullName>
    <label>Attempt Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>