force-app/main/default/objects/Integration_Attempt__c/fields/Attempt_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Timestamp__c</fullName>
    <label>Attempt Timestamp</label>
    <type>DateTime</type>
</CustomField>