force-app/main/default/objects/Integration_Attempt__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <label>CorrelationId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>