force-app/main/default/objects/Integration_Attempt__c/fields/HTTP_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Endpoint__c</fullName>
    <label>HTTP Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>