force-app/main/default/objects/Integration_Attempt__c/fields/HTTP_Status__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Status__c</fullName>
    <label>HTTP Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>