force-app/main/default/objects/Integration_Attempt__c/fields/Integration_Log__c.field-meta.xml
<CustomField>
    <fullName>Integration_Log__c</fullName>
    <label>Integration Log</label>
    <referenceTo>Integration_Log__c</referenceTo>
    <relationshipLabel>IntegrationAttempts</relationshipLabel>
    <relationshipName>IntegrationAttempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>