force-app/main/default/objects/Integration_Attempt__c/fields/Retry_after_seconds__c.field-meta.xml
<CustomField>
    <fullName>Retry_after_seconds__c</fullName>
    <label>Retry After (seconds)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>