force-app/main/default/objects/Integration_Attempt__c/fields/Will_Retry__c.field-meta.xml
<CustomField>
    <fullName>Will_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Retry</label>
    <type>Checkbox</type>
</CustomField>