force-app/main/default/objects/Integration_Attempt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Integration_Log__c</columns>
    <columns>HTTP_Status_Code__c</columns>
    <columns>HTTP_Status__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Attempt_Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>